[project]
name = "reflow"
version = "0.1.0"
description = ""
authors = [
    {name = "Randy May",email = "randy@mathysphere.com"}
]
#readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyzmq (>=26.4.0,<27.0.0)",
    "dill (>=0.4.0,<0.5.0)",
    "netifaces (>=0.11.0,<0.12.0)",
]

[tool.poetry]
packages = [{include = "reflow", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
